[project]
name = "github-projects"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.12",
    "pydantic>=2.11.5",
    "requests>=2.32.3",
    "python-dotenv>=1.0.0",
    "uvicorn>=0.34.3",
    "httpx>=0.28.1",
    "fastapi-mcp>=0.3.4",
    "fastmcp>=2.10.1",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "types-requests>=2.32.0",
]
